kubernetes/deploy+service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: port-app
  name: port-app
  namespace: yohapp
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: port-app
  template:
    metadata:
      labels:
        app: port-app
    spec:
      containers:
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8 # substitua pelo IP do servidor DNS que você deseja usar
      - name: port-app
        image: yohrannes/website-portifolio:latest
# Get directly from docker registry
#        image: docker.io/yohrannes/website-portifolio:latest
        # You can uncomment these lines to set the HOSTNAME and HOST_IP environment variables
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: port-app-svc
  namespace: yohapp
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 5000
  selector:
    app: port-app
  type: ClusterIP
